DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2002-09-04 patrickh    Fixed bugs relating to registration of event listener
                       Beans that were not instantiated lazily by the Java GUI.
                       NEW VERSION: 0.10.3
2002-08-27 patrickh    The output from 'tweek-config --cxxflags' will include
                       -DTWEEK_HAVE_CXX=1 if the C++ API is available.
                       NEW VERSION: 0.10.2
2002-08-19 nonchocoboy Added JTreeTable component to the Tweek extensions
                       UI library as found in The Swing Connection.
                       NEW VERSION: 0.10.1
2002-08-17 nonchocoboy Added support for making beans dependent on other beans
                       in order to make sure Tweek loads the bean dependencies
                       first. This includes changes in the beanlist XML format
                       to support the new bean dependency.
                       NEW VERSION: 0.10.0
2002-08-17 patrickh    If the IRIX SPROC threading subsystem is used with VPR,
                       the C++ ABI is disabled because SPROC threads conflict
                       with omniORB.
                       NEW VERSION: 0.9.3
2002-08-16 patrickh    Fixed a bug where the paths to third-party JAR files
                       could have garbage in it when returned by running
                       'tweek-config --jars'.
2002-08-16 patrickh    Made layout adjustments in the Java GUI to improve
                       usability on IRIX.  Added the Metouia look and feel.
                       NEW VERSION: 0.9.2
2002-08-14 patrickh    The Icon Viewer is now user configurable.
                       NEW VERSION: 0.9.1
2002-08-14 patrickh    org.vrjuggler.tweek.beans.BeanPreferences.initGUI() has
                       been renamed to the have the more specific name
                       org.vrjuggler.tweek.beans.BeanPreferences.initPrefsGUI() 